--- a/src/components/HaskellEditor/HaskellEditor.css
+++ b/src/components/HaskellEditor/HaskellEditor.css
@@ -1,9 +1,6 @@
 .editor-container {
-  width: 100%; 
-  height: 100%; 
   display: flex;
   flex-direction: column;
-  min-height: 0; 
 }
 
 .editor-section {
@@ -11,11 +8,8 @@
   border-radius: 8px;
   overflow: hidden;
   background: #1e1e1e;
-  flex: 1; 
   display: flex;
   flex-direction: column;
-  min-height: 0;
-  margin-top: 1rem;
 }
 
 .output-section {
@@ -26,29 +20,24 @@
   color: #d4d4d4;
 }
 
-.action-button {
-  background-color: #D9D9D9;
-  color: #333;
-  padding: 0.4rem 0.8rem;
-  border-radius: 4px;
-  font-family: 'Jura', sans-serif; 
-  font-size: 1rem;
-  font-weight: 500;
-  text-decoration: none;
-  border-radius: 8px;
-  transition: background-color 0.2s;
-}
-
-.editor-section > div {
-  flex: 1;
-  min-height: 0;
+.editor-title, .action-button {
+  font-family: 'Jura', sans-serif;
 }
 
 .editor-title {
-  font-family: 'Jura', sans-serif; 
   color: #333;
   margin-bottom: 10px;
   font-size: 2rem;
   font-weight: bold;
   text-align: center;
+}
+
+.action-button {
+  background-color: #D9D9D9;
+  color: #333;
+  padding: 0.4rem 0.8rem;
+  font-size: 1rem;
+  font-weight: 500;
+  text-decoration: none;
+  transition: background-color 0.2s;
 }
