--- a/src/components/HaskellEditor/HaskellEditor.css
+++ b/src/components/HaskellEditor/HaskellEditor.css
@@ -24,7 +24,7 @@
   color: #d4d4d4;
 }
 
-.editor-title, .action-button {
+.editor-title, .action-button, .output-section {
   font-family: 'Jura', sans-serif;
 }
 
