--- a/src/components/HaskellEditor/HaskellEditor.css
+++ b/src/components/HaskellEditor/HaskellEditor.css
@@ -2,30 +2,29 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  background: #1e1e1e; 
+  border-radius: 8px;
   overflow: hidden;
+  border: 1px solid #3a3a3a;
 }
 
 .editor-section {
-  border: 1px solid #3a3a3a;
-  border-radius: 8px;
-  overflow: hidden;
-  background: #1e1e1e;
-  display: flex;
-  flex-direction: column;
   flex: 1;
   min-height: 0;
 }
 
 .output-section {
   border: 1px solid #3a3a3a;
-  border-radius: 8px;
-  padding: 1rem;
+  padding: 0.4rem;
   background: #252526;
   color: #d4d4d4;
+  position: relative;
 }
 
-.editor-title, .action-button, .output-section {
+.output-title {
   font-family: 'Jura', sans-serif;
+  font-size: 14px;
+  font-weight: lighter;
 }
 
 .editor-title {
@@ -36,12 +35,4 @@
   text-align: center;
 }
 
-.action-button {
-  background-color: #D9D9D9;
-  color: #333;
-  padding: 0.4rem 0.8rem;
-  font-size: 1rem;
-  font-weight: 500;
-  text-decoration: none;
-  transition: background-color 0.2s;
-}
+
