--- a/src/components/HaskellEditor/HaskellEditor.css
+++ b/src/components/HaskellEditor/HaskellEditor.css
@@ -2,10 +2,10 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  background: #1e1e1e; 
+  background: #1e1e1e;
   border-radius: 8px;
   overflow: hidden;
-  border: 1px solid #3a3a3a;
+  border: 0.5px solid #3a3a3a;
 }
 
 .editor-section {
@@ -14,14 +14,13 @@
 }
 
 .output-section {
-  border: 1px solid #3a3a3a;
   padding: 0.4rem 0.4rem 0.2rem;
-  background: #252526;
-  color: #d4d4d4;
+  background: #d4d4d4;
+  color: #252526;
   position: relative;
   min-height: 18%;
   max-height: 10vh;
-  overflow: hidden; 
+  overflow: hidden;
   display: flex;
   flex-direction: column;
 }
@@ -33,7 +32,7 @@
   overflow-y: auto;
   flex: 1;
   min-height: 0;
-  max-height: 100%; 
+  max-height: 100%;
 }
 
 .output-section pre::-webkit-scrollbar {
@@ -48,21 +47,11 @@
   font-family: 'Jura', sans-serif;
   font-size: 14px;
   font-weight: lighter;
-  display: inline-block; 
-  padding-bottom: 2px; 
-  margin-top: 2px; 
-  margin-bottom: 0px; 
+  display: inline-block;
+  padding-bottom: 2px;
+  margin-top: 2px;
+  margin-bottom: 0px;
   margin-left: 2px;
   text-decoration: underline;
   text-underline-offset: 3px;
 }
-
-.editor-title {
-  color: #333;
-  margin-bottom: 10px;
-  font-size: 2rem;
-  font-weight: bold;
-  text-align: center;
-}
-
-
