--- a/src/App.css
+++ b/src/App.css
@@ -146,5 +146,10 @@ html, body, #root {
   font-size: 1rem;
   text-align: center;
   opacity: 0.95;
-  text-shadow: 0 0 4px rgba(0, 0, 0, 0.7);  
+  text-shadow:
+  -2px -2px 2px rgba(0,0,0,0.8),
+   2px -2px 2px rgba(0,0,0,0.8),
+  -2px  2px 2px rgba(0,0,0,0.8),
+   2px  2px 2px rgba(0,0,0,0.8);
+
 }
